Adding Z80 Optimized Routines as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/z80float"]
 	path = src/z80float
 	url = https://github.com/Zeda/z80float.git
+[submodule "Z80-Optimized-Routines"]
+	path = Z80-Optimized-Routines
+	url = https://github.com/Zeda/Z80-Optimized-Routines
